--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links
 main:
   - title: "About"
-    url: /about
+    url: /about/
+  - title: "Posts"
+    url: /posts/
   #- title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
