--- a/_config.yml
+++ b/_config.yml
@@ -189,7 +189,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false  # 읽는데 걸리는 소요 시간
+      show_date: true # 포스팅 날짜 표시 여부
       comments: true
       share: true
       related: true
