feat : disqus 댓글 기능 추가
- disqus 댓글 기능 추가로 Config 수정
- 포스트에 comments 기능 추가 (테스트용)

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ words_per_minute: 200
 comments:
   provider: null
   disqus:
-    shortname: null
+    shortname: "damichoi-dev" #null
   discourse:
     server: null
   facebook:
