style : disqus 댓글 기능 설정 수정
disqus 댓글 기능 설정 수정

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ masthead_title: 로라의 기술블로그
 breadcrumbs: ture
 words_per_minute: 200
 comments:
-  provider: null
+  provider: "disqus" #null
   disqus:
     shortname: "damichoi-dev" #null
   discourse:
