--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ name: Dami Choi
 description: 이 블로그는 개발자로서 어떻게 잘 성장할 수 있을까 고민하다가 만든 기술블로그입니다.
 url: 'https://damichoi.github.io/'
 baseurl: null
-repository: null
+repository: 'DAMICHOI/DAMICHOI.github.io' #null
 teaser: null
 logo: null
 masthead_title: 로라의 기술블로그
 breadcrumbs: false
 words_per_minute: 200
 comments:
-  provider: #null
+  provider: 'utterances' #null
   disqus:
-    shortname: #null
+    shortname: null
   discourse:
     server: null
   facebook:
@@ -24,8 +24,8 @@ comments:
     num_posts: null
     colorscheme: null
   utterances:
-    theme: null
-    issue_term: null
+    theme: 'photon-dark'  #null
+    issue_term: 'pathname'  #null
   staticman:
     branch: null
     endpoint: null
