chore : timezone 세팅
- timezone 세팅

--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ sass:
 permalink: '/:categories/:title/'
 paginate: 5
 paginate_path: '/page:num/'
-timezone: null
+timezone: Asia/Seoul  #null
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
